classDiagram
  class myrequests {
  }
  class job {
  }
  class proxy_builders {
  }
  class list_builder {
  }
  class proxy_builder {
  }
  class ssl_proxies {
  }
  class proxy_handler {
  }
  class request_handler {
  }
  class request_worker {
  }
  class useragent_handler {
  }
  list_builder --> proxy_builder
  ssl_proxies --> proxy_builder
  proxy_handler --> list_builder
  proxy_handler --> proxy_builder
  proxy_handler --> ssl_proxies
  request_handler --> job
  request_handler --> request_worker
  request_worker --> job
  request_worker --> proxy_handler
  request_worker --> useragent_handler
